syntax = "proto3";

package localSealedSliceStorepb;

option go_package = "github.com/i5heu/ouroboros-db/internal/localSealedSliceStorepb;localSealedSliceStorepb";

message SliceMetadata {
  bytes chunk_hash = 1;
  bytes pub_key_hash = 2;
  bytes sealed_slice_hash = 3;
  uint32 rs_data_slices = 4;
  uint32 rs_parity_slices = 5;
  uint32 rs_slice_index = 6;
  bytes nonce = 7;
}

